Install book-info App/destination-rules.yml
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: kiali
  namespace: istio-system
spec:
  host: kiali
  subsets:
    - name: kiali
      labels:
        app: kiali
---
